force-app/main/default/objects/Penny_Badge__c/Penny_Badge__c.object-meta.xml
<CustomObject>
    <label>Penny Badge</label>
    <nameField>
        <displayFormat>PBG-{0000}</displayFormat>
        <label>Penny Badge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penny Badge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>