force-app/main/default/objects/Penny_Badge__c/fields/Awarded_By__c.field-meta.xml
<CustomField>
    <fullName>Awarded_By__c</fullName>
    <label>Awarded By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coach</fullName>
                <default>true</default>
                <label>Coach</label>
            </value>
            <value>
                <fullName>Founder</fullName>
            </value>
            <value>
                <fullName>system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>