force-app/main/default/objects/Penny_Badge__c/fields/Badge_Key__c.field-meta.xml
<CustomField>
    <fullName>Badge_Key__c</fullName>
    <label>Badge Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>