force-app/main/default/objects/Penny_Badge__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learner</label>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Penny Badge</relationshipLabel>
    <relationshipName>Penny_Badge</relationshipName>
    <type>Lookup</type>
</CustomField>